Project updated new all

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-MONGO_URI=mongodb+srv://ganjinghwan:BuuXCxTI16cBSYvq@mongoe-recipe.c51zn.mongodb.net/recipesinfo?retryWrites=true&w=majority&appName=MongoE-Recipe
+MONGO_URI=mongodb+srv://masomaticdev:ik4gdEfJ8J7BvS8f@cluster0.1idcu.mongodb.net/authentication_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=MMUSoftwareEngineering
+NODE_ENV=production
+CLIENT_URL=http://localhost:5173
 Username: ganjinghwan
 Pass: BuuXCxTI16cBSYvq
