--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@chakra-ui/react": "^2.10.4",
     "@emotion/react": "^11.13.3",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "zustand": "^5.0.1"
