--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server/server.js "
+    "dev": "NODE_ENV=development nodemon server/server.js ",
+    "start": "NODE_ENV=production node server/server.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "type": "module",
   "keywords": [],
@@ -11,8 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.4.0",
     "mongoose": "^8.8.1"
   },
   "devDependencies": {
