Testing all update

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon server/server.js ",
-    "start": "NODE_ENV=production node server/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server/server.js ",
+    "start": "cross-env NODE_ENV=production node server/server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "type": "module",
@@ -24,6 +24,7 @@
     "mongoose": "^8.8.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.7"
   }
 }
